--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "buefy": "^0.6.2",
-    "bulma-timeline": "^1.1.2",
+    "buefy": "^0.6.3",
+    "bulma": "^0.6.2",
+    "bulma-timeline": "^1.1.5",
     "lodash.debounce": "^4.0.8",
-    "marked": "^0.3.9",
+    "marked": "^0.3.12",
     "ramda": "^0.25.0",
     "superagent": "^3.8.2",
     "timeago.js": "^3.0.2",
@@ -23,51 +24,51 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.4",
+    "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.1.2",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
-    "chalk": "^2.0.1",
+    "chalk": "^2.3.0",
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.14.0",
+    "css-loader": "^0.28.9",
+    "eslint": "^4.16.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-import-resolver-webpack": "^0.8.4",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^4.0.1",
+    "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-vue": "^4.0.1",
+    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-vue": "^4.2.2",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.3",
+    "http-proxy-middleware": "^0.17.4",
     "node-sass": "^4.7.2",
-    "opn": "^5.1.0",
+    "opn": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.3.0",
+    "ora": "^1.4.0",
     "portfinder": "^1.0.13",
-    "rimraf": "^2.6.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.6.2",
-    "vue-style-loader": "^3.0.3",
+    "semver": "^5.5.0",
+    "shelljs": "^0.8.1",
+    "url-loader": "^0.6.2",
+    "vue-loader": "^14.1.1",
+    "vue-style-loader": "^3.1.2",
     "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.9.1",
-    "webpack-bundle-analyzer": "^2.9.1",
-    "webpack-dev-middleware": "^1.12.2",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-dev-middleware": "^2.0.4",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.1"
   },
